@@ -23,9 +23,6 @@
     Host = 'localhost'
     Port = 48081
 
-[[DeviceList]]
-  Name = 'Gyro'
-  Profile = 'Example-Gyro'
-  Description = 'An Example Gyro Device'
-  [DeviceList.Protocols]
-    [DeviceList.Protocols.Gyro]
+[Device]
+  ProfilesDir = 'res/profiles'
+  DevicesDir = 'res/devices'
