@@ -22,18 +22,6 @@
     Host = 'localhost'
     Port = 48081
 
-[[DeviceList]]
-  Name = 'RandomDevice1'
-  Profile = 'ExampleSensor'
-  Description = 'An Example Random Device'
-  [DeviceList.Protocols]
-    [DeviceList.Protocols.Other]
-      Address = 'someSensorEndpoint'
-  [[DeviceList.AutoEvents]]
-    Resource = 'SensorOne'
-    OnChange = false
-    Frequency = '10s'
-  [[DeviceList.AutoEvents]]
-    Resource = 'SensorTwo'
-    OnChange = true
-    Frequency = '15000ms'
+[Device]
+  ProfilesDir = 'res/profiles'
+  DevicesDir = 'res/devices'
