@@ -1,0 +1,13 @@
+{
+  "name": "Device1",
+  "profileName": "TemplateSensor",
+  "description": "An Example Template Device",
+  "protocols":
+  {
+     "Other": { "Address": "someSensorEndpoint" }
+  },
+  "autoEvents":
+  [
+    { "sourceName": "SensorOne", "onChange": false, "frequency": "10s" }
+  ]
+}
