@@ -324,6 +324,45 @@ char *edgex_metadata_client_add_device
   return result;
 }
 
+void edgex_metadata_client_add_device_jobj (iot_logger_t *lc, edgex_service_endpoints *endpoints, JSON_Object *jobj, devsdk_error *err)
+{
+  if (!json_object_get_string (jobj, "adminState"))
+  {
+    json_object_set_string (jobj, "adminState", "UNLOCKED");
+  }
+  if (!json_object_get_string (jobj, "operatingState"))
+  {
+    json_object_set_string (jobj, "operatingState", "UP");
+  }
+  if (!json_object_get_string (jobj, "apiVersion"))
+  {
+    json_object_set_string (jobj, "apiVersion", "2");
+  }
+  JSON_Value *reqval = edgex_wrap_request ("Device", json_object_get_wrapping_value (jobj));
+  char *json = json_serialize_to_string (reqval);
+  edgex_ctx ctx;
+  *err = EDGEX_OK;
+  char url[URL_BUF_SIZE];
+
+  memset (&ctx, 0, sizeof (edgex_ctx));
+
+  snprintf (url, URL_BUF_SIZE - 1, "http://%s:%u/api/v2/device", endpoints->metadata.host, endpoints->metadata.port);
+  edgex_http_post (lc, &ctx, url, json, edgex_http_write_cb, err);
+  if (err->code == 0)
+  {
+    char *id = edgex_id_from_response (ctx.buff);
+    iot_log_info (lc, "Device %s created with id %s", json_object_get_string (jobj, "name"), id);
+    free (id);
+  }
+  else
+  {
+    iot_log_info (lc, "edgex_metadata_client_add_device_jobj: %s: %s", err->reason, ctx.buff);
+  }
+  json_value_free (reqval);
+  free (ctx.buff);
+  json_free_serialized_string (json);
+}
+
 void edgex_metadata_client_add_or_modify_device
 (
   iot_logger_t *lc,
